<resources>
    <string name="app_name">Se7etak-TPA</string>
    <string name="name">Name <font color='#FF0000'>*</font></string>
    <string name="email">Email <font color='#FF0000'>*</font></string>
    <string name="password">Password <font color='#FF0000'>*</font></string>
    <string name="confirm_password">Confirm Password <font color='#FF0000'>*</font></string>
    <string name="mobile_number">Phone Number <font color='#FF0000'>*</font></string>
    <string name="se7etak_membership_id">Se7etak Membership ID <font color='#FF0000'>*</font></string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">already have an account?</string>
    <string name="login">Login</string>
    <string name="create_account_title">Create an account</string>
    <string name="verification_text">We\'ve sent an SMS with verification code to your phone <b>%s</b></string>
    <string name="test_verification_text">We\'ve sent an SMS with verification code to your phone <b>01113586932</b></string>
    <string name="code_expire_text">code expires in %d:%02d</string>
    <string name="mobile_verification_title">Mobile Verification</string>
    <string name="enter_code">Enter Code</string>
    <string name="didn_t_get_code">didn\'t get the code?</string>
    <string name="send_again">Send Again</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="password_rules">password must be at least 8 characters including at least 1 Uppercase, 1 Lowercase, 1 Numeric and 1 special character.</string>
    <string name="password_google_maps_keyrules">password must be at least 8 characters including at least 1 Uppercase, 1 Lowercase, 1 Numeric and 1 special character.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_request_approval">Request Approval</string>
    <string name="title_request_reimbursement">Request Reimbursement</string>
    <string name="title_check_network">Check Network</string>
    <string name="اسنان">اسنان</string>
    <string name="مركز_بصريات">مركز بصريات</string>
    <string name="صيدليات">صيدليات</string>
    <string name="عيادات">عيادات</string>
    <string name="مجمع_عيادات">مجمع عيادات</string>
    <string name="مراكز_اشعة">مراكز اشعة</string>
    <string name="مراكز_علاج_طبيعي">مراكز علاج طبيعي</string>
    <string name="مراكز_متخصصة">مراكز متخصصة</string>
    <string name="مستشفيات">مستشفيات</string>
    <string name="معامل">معامل</string>
    <string name="main_speciality_title">التخصص الرئيسي:</string>
    <string name="secondary_speciality_title">التخصص الفرعي:</string>
    <string name="address_title">العنوان:</string>
    <string name="phone_title">ارقام التليفون:</string>
    <string name="hotline_title">الخط الساخن:</string>
    <string name="city_governorate_text">%s، %s</string>
    <string name="email_hint">john@example.com</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
    <string name="الكل">الكل</string>
    <string name="approval">Approval</string>
    <string name="reimbursement">Reimbursement</string>
    <string name="network">Network</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="text_continue">Continue</string>
    <string name="text_edit_title">Edit %s</string>

    <string name="underlined_attachment1"> <u>File1</u></string>
    <string name="underlined_attachment2"> <u>File2</u></string>

</resources>