<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:background="@drawable/gradient_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MobileVerificationFragment">

            <TextView
                android:id="@+id/tv_app_bar_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/mobile_verification_title"
                android:textColor="@color/purple_dark"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_mobile_verification"
                style="@style/MaterialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_bar_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="32dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="32dp">

                    <ImageView
                        android:id="@+id/iv_otp"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_otp"
                        app:tint="@color/purple_dark" />

                    <TextView
                        android:id="@+id/tv_verification_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/verification_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_enter_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:text="@string/enter_code"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/il_code"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_code"
                            style="@style/TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="4"
                            android:singleLine="true"
                            android:textColor="@color/purple_dark"
                            android:textSize="32sp"
                            tools:text="1234" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_code_expire_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@{@string/code_expire_text(5,2)}"
                        tools:text="code expires in 5:00"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cv_login">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/didn_t_get_code" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_send_again"
                            style="@style/TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/runda_medium"
                            android:text="@string/send_again" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_confirm"
                        style="@style/ContainedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="@color/purple_dark"
                        android:text="@string/confirm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/il_password" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_mobile_verification" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</layout>